--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,3 @@
-
 html {
     font-size: 62.5%;
 }
@@ -6,11 +5,11 @@ html {
 body {
     background-color: #2B1D46;
     font-family: "SF", "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 1.6em; /* currently ems cause chrome bug misinterpreting rems on body element */
+    font-size: 1.6em;
+    /* currently ems cause chrome bug misinterpreting rems on body element */
     line-height: 1.6;
     font-weight: 400;
     margin: 4rem;
-
 }
 
 body ::-moz-selection {
@@ -26,6 +25,10 @@ body ::selection {
 #page-content {
     background-color: #FFF;
     padding: 4rem 4rem 0 4rem;
+}
+
+footer {
+    text-align: center;
 }
 
 #tabs {
@@ -114,7 +117,12 @@ $jaune: #FFEF00;
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-weight: 700;
     line-height: 1.3;
     font-family: "Montserrat", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -134,7 +142,6 @@ h3 {
     width: 66%;
     font-size: 2.8rem;
     margin-top: 6rem;
-
 }
 
 h4 {
@@ -224,7 +231,9 @@ a:hover {
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-ol, ul, li {
+ol,
+ul,
+li {
     padding-left: 0;
     margin-top: -0rem;
     margin-bottom: 0rem;
@@ -239,11 +248,16 @@ li {
 }
 
 ul li::before {
-    content: "\2022"; /* Add content: \2022 is the CSS Code/unicode for a bullet */
-    color: #FC5B26; /* Change the color */
-    display: inline-block; /* Needed to add space between the bullet and the text */
-    width: 1em; /* Also needed for space (tweak if needed) */
-    margin-left: -1em; /* Also needed for space (tweak if needed) */
+    content: "\2022";
+    /* Add content: \2022 is the CSS Code/unicode for a bullet */
+    color: #FC5B26;
+    /* Change the color */
+    display: inline-block;
+    /* Needed to add space between the bullet and the text */
+    width: 1em;
+    /* Also needed for space (tweak if needed) */
+    margin-left: -1em;
+    /* Also needed for space (tweak if needed) */
 }
 
 ul ul,
@@ -280,8 +294,10 @@ blockquote p {
 }
 
 .sidebar ul li::before {
-    color: transparent; /* Change the color */
-    margin-left: 0; /* Also needed for space (tweak if needed) */
+    color: transparent;
+    /* Change the color */
+    margin-left: 0;
+    /* Also needed for space (tweak if needed) */
 }
 
 .nav {
