--- a/assets/style.css
+++ b/assets/style.css
@@ -155,6 +155,12 @@ strong {
     font-style: inherit;
 }
 
+hr {
+    border-top: 0.05rem solid #fefefe;
+    height: 0.05rem;
+    margin: 1rem 0;
+}
+
 .intro {
     width: 66%;
     font-style: italic;
