--- a/assets/style.css
+++ b/assets/style.css
@@ -44,7 +44,7 @@ footer {
 }
 
 .graph {
-    background-color: rgba(244, 244, 247, 0.5);
+    background-color: #f9f9fb;
     padding: 0 4rem;
     margin: 0 -4rem;
 }
@@ -59,7 +59,7 @@ footer {
 }
 
 .tools {
-    background-color: rgba(244, 244, 247, 0.5);
+    background-color: #f9f9fb;
     box-shadow: inset 0px -8px 8px rgba(0, 0, 0, 0.05);
     padding: 2rem 4rem;
     margin: 0 -4rem;
