--- a/src/styles/_typography.styl
+++ b/src/styles/_typography.styl
@@ -72,14 +72,13 @@ strong
     color $primaryColor
     font-style inherit
 
-li
+ul li
     list-style none
 
 ol, ul, li
     padding-left 0
     margin-top -0rem
     margin-bottom 0rem
-    list-style inside
     font-size 1.6rem
     line-height 1.3
     color $secondaryColor
