--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -4,6 +4,7 @@
 @import '_inputs'
 @import '_common'
 @import 'components/*'
+@import '_print'
 
 #page-content
     background-color $contentBackgroundColor
