:pencil: add eula page
fix https://gitlab.hevaweb.com/web/dashboard-template/issues/12

--- a/src/styles/_common.styl
+++ b/src/styles/_common.styl
@@ -11,6 +11,10 @@ footer
     text-align center
     color $footerTextColor
     height 2rem
+    *
+        margin-right: 1em
+    a
+        color $footerTextColor
 
 blockquote
     background-color $blockquoteBackgroundColor
