:sparkles: allow user to reorient table & regroup labels

--- a/src/styles/components/_graphs.styl
+++ b/src/styles/components/_graphs.styl
@@ -1,6 +1,6 @@
 .graph
     background-color $graphBackgroundColor
-    padding 0 4rem
+    padding 0 4rem 1rem 4rem
     margin 0 -4rem
     h4
         margin-top 0
@@ -12,7 +12,7 @@
 .two-graphs
     background-color $graphBackgroundColor
     margin 0 -4rem !important
-    padding 0 4rem
+    padding 0 4rem 1rem 4rem
     .graph
         margin 0
         padding 0
