--- a/src/styles/components/_sliders.styl
+++ b/src/styles/components/_sliders.styl
@@ -4,3 +4,9 @@
         background-color $sliderBackgroundColor
     .rc-slider-dot-active, .rc-slider-handle, .rc-slider-handle:hover
         border-color $sliderBorderColor
+    .rc-slider-mark-text
+        color $sliderTextColor
+    .rc-slider-mark-text-active
+        color $sliderTextColoractive
+    .rc-slider-rail
+        background-color $sliderRailBackground
