--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -2,17 +2,12 @@
 $orange = #fc5b26
 $lightOrange = #FF7240
 $purple = #2B1D46
-$black = #000000
-$white = #FFFFFF
-$whitePurple = #F4F2F7
-$whiteGrey = #f9f9fb
-$lightGrey = #aeaeae
-$grey = #bbbbbb;
-$darkGrey = #555555;
 $lightPurple = #5F5A85
 $greyPurple = #9491AD
-$blueGrey = #C9C8D6
 $purpleGrey = #B7A8C7
+$blueGrey = #C9C8D6
+$whitePurple = #F4F2F7
+$white = #FFFFFF
 
 // Theme colors
 $primaryColor = $orange
@@ -21,7 +16,7 @@ $secondaryColor = $purple
 
 // Body colors
 $bodyBackgroundColor = $secondaryColor
-$bodySelectionBackgroundColor = $greyPurple
+$bodySelectionBackgroundColor = $greyPurplePurple
 $contentBackgroundColor = $white
 
 // Links colors
@@ -31,36 +26,36 @@ $linkTextColor = $lightPurple
 $hrBackgroundColor = $primaryColor
 
 // Footer colors
-$footerTextColor = $lightGrey
+$footerTextColor = $blueGrey
 
 // Blockquote colors
 $blockquoteBackgroundColor = rgba($whitePurple, .5)
 $blockquoteBorderLeftColor = $whitePurple
-$blockquotePagragraphBackgroundColor = $greyPurple
+$blockquotePagragraphBackgroundColor = $greyPurplePurple
 
 // Code colors
-$codeTextColor = $greyPurple
+$codeTextColor = $greyPurplePurple
 $codeBackgroundColor = $whitePurple
 
 // Button colors
-$buttonBorderColor = $grey
-$buttonTextColor = $darkGrey
+$buttonBorderColor = $greyPurple
+$buttonTextColor = $lightPurple
 
 // Intro colors
 $introTextColor = $lightPurple
 $introBorderLeftColor = $blueGrey
 
 // Tools colors
-$toolsBackgroundColor = $whiteGrey
+$toolsBackgroundColor = $whitePurple
 $toolsBorderBottomColor = $white
-$toolsBoxShadowColor = rgba($black, 0.05)
+$toolsBoxShadowColor = rgba($purple, 0.05)
 
 // Tabs colors
 $tabsTextColor = $lightPurple
 $tabsHoverTextColor = $secondaryColor
 $tabsBackgroundColor = $whitePurple
 $tabsBorderBottomColor = $white
-$tabsBoxShadowColor = rgba($black, 0.05)
+$tabsBoxShadowColor = rgba($purple, 0.05)
 $tabsSelectedBorderColor = $primaryColor
 $tabsSelectedColor = $primaryColor
 
@@ -72,7 +67,7 @@ $modebarFillActiveHoverColor = $lightOrange
 
 // Graph colors
 $graphTitleTextColor = $lightPurple
-$graphBackgroundColor = $whiteGrey
+$graphBackgroundColor = $whitePurple
 
 // Nav colors
 $navItemHoverColor = $white
@@ -84,8 +79,12 @@ $notifierTextColor = $white
 $notifierCloseTextColor = $primaryColor
 
 // Sliders colors
-$sliderBackgroundColor = $primaryColor
-$sliderBorderColor = $primaryColor
+$sliderBackgroundColor = rgba($lightOrange, 0.4)
+$sliderBorderColor = $lightOrange
+$sliderTextColoractive = $primaryColor
+$sliderTextColor = $lightPurple
+$sliderRailBackground = $whitePurple
+
 
 // Conclusion colors
 $conclusionBorderLeftColor = $primaryColor
