réajustement style text

--- a/src/styles/_common.styl
+++ b/src/styles/_common.styl
@@ -16,21 +16,12 @@ footer
     a
         color $footerTextColor
 
-blockquote
-    background-color $blockquoteBackgroundColor
-    padding 1.6rem 2rem
-    border-left 4px solid $blockquoteBorderLeftColor
-    p
-        font-size 1.6rem
-        font-style italic
-        color $blockquotePagragraphBackgroundColor
-        margin-top 0
 
 hr
-    background-color $hrBackgroundColor
+    background-color $whitePurple
     border-width 0
     height 2px
-    width 50%
+    width 100%
     margin 2rem auto
 
 code
