--- a/src/styles/components/_tabs.styl
+++ b/src/styles/components/_tabs.styl
@@ -17,7 +17,15 @@
         border-color $tabsSelectedBorderColor
         color $tabsSelectedColor
 
-#tabs
+/*#tabs
+    box-shadow inset 0px -8px 8px $tabsBoxShadowColor
+    background-color $tabsBackgroundColor
+    border-bottom solid 1px $tabsBorderBottomColor
+    padding 0 4rem
+    margin 0 -4rem
+*/
+
+.tabs
     box-shadow inset 0px -8px 8px $tabsBoxShadowColor
     background-color $tabsBackgroundColor
     border-bottom solid 1px $tabsBorderBottomColor
