--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -2,35 +2,54 @@
 $orange = #fc5b26
 $lightOrange = #FF7240
 $purple = #2B1D46
-$lightPurple = #5F5A85
-$greyPurple = #9491AD
-$purpleGrey = #B7A8C7
-$blueGrey = #C9C8D6
-$whitePurple = #F4F2F7
+$lightPurple = #3b3558
+$greyPurple = #5d5a85
+$purpleGrey = #9491ad
+$blueGrey = #c9c8d6
+$whitePurple = #f4f4f7
 $white = #FFFFFF
+$SickGreen = #a9c944
 
 // Theme colors
 $primaryColor = $orange
 $secondaryColor = $purple
-
 
 // Body colors
 $bodyBackgroundColor = $secondaryColor
 $bodySelectionBackgroundColor = $greyPurplePurple
 $contentBackgroundColor = $white
 
-// Links colors
-$linkTextColor = $lightPurple
+// Texts colors
+$inkTextColor = $purple
+$secondaryTextColor = $greyPurple
 
-// HR colors
-$hrBackgroundColor = $primaryColor
+// Action colors
+$linkTextColor = $lightPurple
+$actionColor = $lightOrange
+
+// Intro & Quote & conslusion colors
+$introBorderLeftColor = $blueGrey
+$blockquoteBorderLeftColor = $blueGrey
+$conclusionBorderLeftColor = $primaryColor
+
+// Tools & tabs colors container
+$toolsBorderBottomColor = $white
+$toolsBoxShadowColor = rgba($purple, 0.05)
+
+// Tabs colors
+$tabsTextColor = $lightPurple
+$tabsHoverTextColor = $secondaryColor
+$tabsBoxShadowColor = rgba($purple, 0.05)
+$tabsSelectedBorderColor = $primaryColor
+$tabsSelectedColor = $primaryColor
+
+
 
 // Footer colors
 $footerTextColor = $blueGrey
 
 // Blockquote colors
 $blockquoteBackgroundColor = rgba($whitePurple, .5)
-$blockquoteBorderLeftColor = $whitePurple
 $blockquotePagragraphBackgroundColor = $greyPurplePurple
 
 // Code colors
@@ -41,33 +60,15 @@ $codeBackgroundColor = $whitePurple
 $buttonBorderColor = $greyPurple
 $buttonTextColor = $lightPurple
 
-// Intro colors
-$introTextColor = $lightPurple
-$introBorderLeftColor = $blueGrey
-
-// Tools colors
-$toolsBackgroundColor = $whitePurple
-$toolsBorderBottomColor = $white
-$toolsBoxShadowColor = rgba($purple, 0.05)
-
-// Tabs colors
-$tabsTextColor = $lightPurple
-$tabsHoverTextColor = $secondaryColor
-$tabsBackgroundColor = $whitePurple
-$tabsBorderBottomColor = $white
-$tabsBoxShadowColor = rgba($purple, 0.05)
-$tabsSelectedBorderColor = $primaryColor
-$tabsSelectedColor = $primaryColor
-
 // Modebar colors
 $modebarFillColor = $secondaryColor
 $modebarFillHoverColor = $lightPurple
 $modebarFillActiveColor = $primaryColor
 $modebarFillActiveHoverColor = $lightOrange
 
-// Graph colors
+// container (graph tools tabs) colors
 $graphTitleTextColor = $lightPurple
-$graphBackgroundColor = $whitePurple
+$containerBackgroundColor = $whitePurple
 
 // Nav colors
 $navItemHoverColor = $white
@@ -84,10 +85,6 @@ $sliderBorderColor = $lightOrange
 $sliderTextColoractive = $primaryColor
 $sliderTextColor = $lightPurple
 $sliderRailBackground = $whitePurple
-
-
-// Conclusion colors
-$conclusionBorderLeftColor = $primaryColor
 
 // Specific colors
 $embeddedImgBordercolor = $purpleGrey
