--- a/src/styles/components/_graphs.styl
+++ b/src/styles/components/_graphs.styl
@@ -9,6 +9,13 @@
   box-shadow inset 0px -8px 8px $toolsBoxShadowColor
   border-bottom solid 1px $toolsBorderBottomColor
 
+.tools [class^="col"]
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
+
+
 .graph
   h4
     margin-top 0
