--- a/src/styles/components/_tabs.styl
+++ b/src/styles/components/_tabs.styl
@@ -4,7 +4,7 @@
         flex-wrap wrap
         font-family $secondaryFont
         font-size 1.3rem
-        color $tabsTextColor
+        color $linkTextColor
         padding 1.6rem
         align-items center
         justify-content center
@@ -16,14 +16,6 @@
     .custom-tab--selected
         border-color $tabsSelectedBorderColor
         color $tabsSelectedColor
-
-/*#tabs
-    box-shadow inset 0px -8px 8px $tabsBoxShadowColor
-    background-color $tabsBackgroundColor
-    border-bottom solid 1px $tabsBorderBottomColor
-    padding 0 4rem
-    margin 0 -4rem
-*/
 
 .tabs
     box-shadow inset 0px -8px 8px $tabsBoxShadowColor
