--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -8,11 +8,11 @@ $purpleGrey = #9491ad
 $blueGrey = #c9c8d6
 $whitePurple = #f4f4f7
 $white = #FFFFFF
-$SickGreen = #a9c944
 
 // Theme colors
 $primaryColor = $orange
 $secondaryColor = $purple
+
 
 // Body colors
 $bodyBackgroundColor = $secondaryColor
@@ -22,15 +22,20 @@ $contentBackgroundColor = $white
 // Texts colors
 $inkTextColor = $purple
 $secondaryTextColor = $greyPurple
-
-// Action colors
-$linkTextColor = $lightPurple
-$actionColor = $lightOrange
-
-// Intro & Quote & conslusion colors
 $introBorderLeftColor = $blueGrey
 $blockquoteBorderLeftColor = $blueGrey
 $conclusionBorderLeftColor = $primaryColor
+
+
+// Action colors
+$linkTextColor = $greyPurple
+$actionColor = $lightOrange
+
+//Borders
+$borderColor = $blueGrey
+$borderColorHover = $purpleGrey
+$borderColorFocus = $purple
+$borderColorDisabled = $whitePurple
 
 // Tools & tabs colors container
 $toolsBorderBottomColor = $white
@@ -43,6 +48,8 @@ $tabsBoxShadowColor = rgba($purple, 0.05)
 $tabsSelectedBorderColor = $primaryColor
 $tabsSelectedColor = $primaryColor
 
+// Table colors
+$tableBorderColor = $borderColor
 
 
 // Footer colors
@@ -53,7 +60,7 @@ $blockquoteBackgroundColor = rgba($whitePurple, .5)
 $blockquotePagragraphBackgroundColor = $greyPurplePurple
 
 // Code colors
-$codeTextColor = $greyPurplePurple
+$codeTextColor = $greyPurple
 $codeBackgroundColor = $whitePurple
 
 // Button colors
