--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -22,6 +22,10 @@ $contentBackgroundColor = $white
 // Texts colors
 $inkTextColor = $purple
 $secondaryTextColor = $greyPurple
+$placeholderTextColor = $purpleGrey
+$disabledTextColor = $blueGrey
+
+// Texts borders colors
 $introBorderLeftColor = $blueGrey
 $blockquoteBorderLeftColor = $blueGrey
 $conclusionBorderLeftColor = $primaryColor
@@ -64,8 +68,8 @@ $codeTextColor = $greyPurple
 $codeBackgroundColor = $whitePurple
 
 // Button colors
-$buttonBorderColor = $greyPurple
-$buttonTextColor = $lightPurple
+$buttonBorderColor = $lightOrange
+$buttonTextColor = $primaryColor
 
 // Modebar colors
 $modebarFillColor = $secondaryColor
@@ -92,6 +96,11 @@ $sliderBorderColor = $lightOrange
 $sliderTextColoractive = $primaryColor
 $sliderTextColor = $lightPurple
 $sliderRailBackground = $whitePurple
+
+$sliderBackgroundDisabledColor = $blueGrey
+$sliderBorderDisabledColor = $blueGrey
+$sliderTextDisabledColor = $blueGrey
+$sliderRailDisabledBackground = $whitePurple
 
 // Specific colors
 $embeddedImgBordercolor = $purpleGrey
