--- a/src/styles/components/_sliders.styl
+++ b/src/styles/components/_sliders.styl
@@ -10,3 +10,17 @@
         color $sliderTextColoractive
     .rc-slider-rail
         background-color $sliderRailBackground
+
+.rc-slider-disabled
+  background-color transparent
+  margin 10px 0
+  .rc-slider-track
+      background-color $sliderBackgroundDisabledColor
+  .rc-slider-dot-active, .rc-slider-handle, .rc-slider-handle:hover
+      border-color $sliderBorderDisabledColor
+  .rc-slider-mark-text
+      color $sliderTextDisabledColor
+  .rc-slider-mark-text-active
+      color $sliderTextDisabledColor
+  .rc-slider-rail
+      background-color $sliderRailDisabledBackground
