--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -6,6 +6,7 @@ $lightPurple = #3b3558
 $greyPurple = #5d5a85
 $purpleGrey = #9491ad
 $blueGrey = #c9c8d6
+$lightGrey = #fdfdfd
 $whitePurple = #f4f4f7
 $white = #FFFFFF
 
