:lipstick: tiny pad adjustement

--- a/src/styles/components/_graphs.styl
+++ b/src/styles/components/_graphs.styl
@@ -1,6 +1,6 @@
 .graph, .two-graphs, .tools, .custom-tabs-container, .dash-table-container
   background-color $containerBackgroundColor
-  padding 4rem
+  padding 2rem 4rem
   margin 0 -4rem
   &>*:first-child
     margin-top 0
