--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -7,18 +7,15 @@
 @import '_print'
 
 #page-content
-    background-color $contentBackgroundColor
-    padding 4rem 4rem 0 4rem
-
-//.text
-//    padding 0 0 2rem 0
+  background-color $contentBackgroundColor
+  padding 0 4rem 0 4rem
 
 .bg-paper
-    background $paperBackgroundColor !important
+  background $paperBackgroundColor !important
 
 .embed-img
-    border solid $embeddedImgBordercolor 1px
-    max-width 500px
-    margin auto
-    width 100%
-    
+  border solid $embeddedImgBordercolor 1px
+  max-width 500px
+  margin auto
+  width 100%
+
