--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -55,6 +55,7 @@ $tabsSelectedColor = $primaryColor
 
 // Table colors
 $tableBorderColor = $borderColor
+$sortIconColor = $lightOrange
 
 
 // Footer colors
