:lipstick: add margin to first child h2 in content

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -9,6 +9,8 @@
 #page-content
   background-color $contentBackgroundColor
   padding 0 4rem 0 4rem
+  h2:first-child
+    margin-top 2rem
 
 .bg-paper
   background $paperBackgroundColor !important
