:lipstick: add margin bottom for last text of page
fix https://gitlab.hevaweb.com/web/dashboard-template/issues/33

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -11,6 +11,8 @@
   padding 0 4rem 0 4rem
   h2:first-child
     margin-top 2rem
+  .text:last-child
+    margin-bottom 2rem
 
 .bg-paper
   background $paperBackgroundColor !important
