:lipstick: flex-based sidebar menu

--- a/src/styles/_common.styl
+++ b/src/styles/_common.styl
@@ -6,6 +6,9 @@ body
   ::-moz-selection, :selection
     background $bodyBackgroundColor
 
+@media (max-width: 960px)
+  body
+    margin 0 0 2rem 0
 
 footer
   height 0
