--- a/src/styles/_typography.styl
+++ b/src/styles/_typography.styl
@@ -74,27 +74,28 @@ strong
   color $primaryColor
   font-style inherit
 
-ul li
-  list-style none
+#page-content
+  ul li
+    list-style none
 
-ol, ul, li
-  padding-left 0
-  margin-top -0rem
-  margin-bottom 0rem
-  font-size 1.6rem
-  line-height 1.3
-  color $secondaryColor
+  ol, ul, li
+    padding-left 0
+    margin-top -0rem
+    margin-bottom 0rem
+    font-size 1.6rem
+    line-height 1.3
+    color $secondaryColor
 
-ul li::before
-  content "\2022"
-  color $primaryColor
-  display inline-block
-  width 1em
-  margin-left -1em
+  ul li::before
+    content "\2022"
+    color $primaryColor
+    display inline-block
+    width 1em
+    margin-left -1em
 
-ul ul, ul ol, ol ol, ol ul
-  margin 0 0 1.5rem 3rem
-  font-size 80%
+  ul ul, ul ol, ol ol, ol ul
+    margin 0 0 1.5rem 3rem
+    font-size 80%
 
 
 .intro, .conclusion, blockquote
