:lipstick: fix nav item hovering

--- a/src/styles/components/_nav.styl
+++ b/src/styles/components/_nav.styl
@@ -11,7 +11,7 @@
     text-decoration none
     font-size 1.6rem
 
-    &:focus, &:hover
+    a:focus, a:hover
       text-decoration none
       color $navItemHoverColor
       transition ease .2s
