:lipstick: tiny visual adjustment on nav links

--- a/src/styles/components/_nav.styl
+++ b/src/styles/components/_nav.styl
@@ -3,13 +3,17 @@
   font-weight 700
   text-align right
   font-size 1.4rem
-  line-height 1.3rem
+  line-height 1.6rem
 
   .nav-item
     list-style-type none
     margin-bottom 1rem
     text-decoration none
     font-size 1.6rem
+
+    a
+      padding .4rem 0
+      color $linkTextColor
 
     a:focus, a:hover
       text-decoration none
