:lipstick: visual adjustment on top menu small screen

--- a/src/styles/components/_sidebar.styl
+++ b/src/styles/components/_sidebar.styl
@@ -54,6 +54,9 @@
 
       .nav-links
         margin-top 0
+        flex-grow 5
+        ul
+          margin auto
 
       .logo-client
         position relative
