--- a/src/styles/components/_graphs.styl
+++ b/src/styles/components/_graphs.styl
@@ -16,6 +16,9 @@
   align-items: stretch;
   justify-content: center;
 
+@media (max-width: 960px)
+  .graph, .two-graphs, .tools, .custom-tabs-container, .dash-table-container
+    margin 0 -2rem 0 -2rem
 
 .graph
   h4
