:pencil: add pec table & graphs

--- a/src/styles/_inputs.styl
+++ b/src/styles/_inputs.styl
@@ -19,11 +19,16 @@ label
   border-style solid
   border-color $borderColor
   line-height 16px
-  padding 8px
+  //padding-top 8px !important
   border-radius 4px
   margin-right 8px
   margin-bottom 8px
   color $inkTextColor
+
+.Select-value
+  background-color $greyPurple !important
+  color $whitePurple !important
+  border-color $whitePurple !important
 
 .Select-control
   padding 0
