:lipstick: Keeping active tab highlighted

--- a/src/styles/components/_nav.styl
+++ b/src/styles/components/_nav.styl
@@ -19,3 +19,18 @@
       text-decoration none
       color $navItemHoverColor
       transition ease .2s
+
+  .nav-item-focus
+
+    list-style-type none
+    margin-bottom 1rem
+    text-decoration none
+    font-size 1.6rem
+
+    a
+
+      text-decoration none
+      color $navItemHoverColor
+      transition ease .2s
+
+
