--- a/src/styles/components/_nav.styl
+++ b/src/styles/components/_nav.styl
@@ -11,6 +11,9 @@
     text-decoration none
     font-size 1.6rem
 
+    &.nav-item-focus a
+      color $navItemHoverColor
+
     a
       padding .4rem 0
       color $linkTextColor
@@ -20,17 +23,5 @@
       color $navItemHoverColor
       transition ease .2s
 
-  .nav-item-focus
-
-    list-style-type none
-    margin-bottom 1rem
-    text-decoration none
-    font-size 1.6rem
-
-    a
-
-      text-decoration none
-      color $navItemHoverColor
-      transition ease .2s
 
 
