--- a/src/styles/variables/_colors.styl
+++ b/src/styles/variables/_colors.styl
@@ -63,7 +63,7 @@ $footerTextColor = $blueGrey
 
 // Blockquote colors
 $blockquoteBackgroundColor = rgba($whitePurple, .5)
-$blockquotePagragraphBackgroundColor = $greyPurplePurple
+$blockquotePagragraphBackgroundColor = $purple
 
 // Code colors
 $codeTextColor = $greyPurple
